# text-to-asl

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sentences_to_translate.txt
src/text_to_asl/: translate.py
tests/: sentences_to_translate.txt  translations.py
